@@ -77,7 +77,7 @@ void run_commands() {
 			arg2 = getarg(buffer, 2, 1);
 			c = find_conversation(arg1);
 			if (!c) c = new_conversation(arg1);
-			write_to_conv(c, arg2, WFLAG_SEND, NULL, time(NULL));
+			write_to_conv(c, arg2, WFLAG_SEND, NULL, time(NULL), -1);
 			serv_send_im(c->gc, arg1, arg2, 0);
 			free(arg1);
 			free(arg2);
